# SCCT-Trainer

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  compile_flags.txt  generate.py  inject.sh  install-toolchain.sh  install_script.sh  pushmaster.py
.github/workflows/: docker_build.yml
Includes/: D3D9Hook.hpp  Drawing.hpp  Entity.hpp  Events.hpp  Hacks.hpp  Memory.hpp  Offsets.hpp  Render.hpp  assembly.h  d3d9hook.h  drawing.h  events.h  hacks.h  mem.h  render.h
Sources/: D3D9Hook.cpp  Drawing.cpp  Events.cpp  Hacks.cpp  Main.cpp  Mem.cpp  Memory.cpp  Render.cpp
asm/: health_detour.asm
c/: CMakeLists.txt  Makefile
c/include/: entity.h  offsets.h  utils.h
c/src/: hacks.c  hook.c  mem.c  utils.c
cpp/: .gitignore  CMakeLists.txt  CMakeSettings.json  generate.py
cpp/include/: entity.hpp  hacks.hpp  hook.hpp  offsets.hpp  utils.hpp
cpp/src/: hacks.cpp  hook.cpp  mem.cpp  utils.cpp
include/: assembly.h  d3d9hook.h  drawing.h  entity.h  entity.hpp  events.h  hacks.h  hacks.hpp  hook.h  hook.hpp  mem.h  mem.hpp  offsets.h  offsets.hpp  patches.h  render.h  utils.h  utils.hpp
includes/: entity.h  hacks.h  mem.h  offsets.h
resources/: notes_sp3.txt
src/: d3d9hook.asm  d3d9hook.c  dll_main.asm  drawing.asm  drawing.c  events.asm  events.asm.bak  events.c  hacks.asm  hacks.c  hacks.cpp  healthDetour.asm  health_detour.asm  hook.c  hook.cpp  hook_end_scene.asm  hook_end_scene.asm.bak  includes.h  main.c  main.cpp  main_thread.asm  main_thread.asm.bak  mem.c  mem.cpp  memory.asm  render.asm  render.c  utils.c  utils.cpp
